--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,17 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# JUST IGNORE EVERYTHING W/ INTELLIJ FOR NOW!
+# All .idea stuff in this file is ignored at this point.
+.idea/*
+
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**/codeStyles
 
 # AWS User-specific
 .idea/**/aws.xml
