--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=weather
 spring.mvc.default-content-type=application/json
+spring.jackson.property-naming-strategy=SNAKE_CASE
